# splitmate-contracts

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/: Cargo.toml  errors.rs  expense.rs  group.rs  input_models.rs  lib.rs  output_models.rs  utils.rs
contracts/splitmate/: Cargo.toml  errors.rs  expense.rs  group.rs  input_models.rs  lib.rs  output_models.rs  utils.rs
contracts/usdnp/: Cargo.toml  lib.rs
